--- a/views/login.html
+++ b/views/login.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>nodejs+express+socket.io聊天室demo-by js8.in</title>
+	<title>北京富广文化传媒有限公司</title>
 </head>
 <body>
 	<h1>登陆开始聊天</h1>
