--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,7 +13,7 @@
 	<script type="text/javascript" src="/js/index.js"></script>
 	<script type="text/javascript" src="/js/date.js"></script>
 	<script type="text/javascript">
-		var userName = '{%=name%}';
+		var userName = '<%= name %>';
 	</script>
 </head>
 <body>
@@ -51,13 +51,13 @@
 	<div id="footer" class="clearfix">
 		<div class="f-l"></div>
 		<p>
-			<a href="<?=B . '/invest/about'?>">关于我们</a> | 
-			<a href="<?=B . '/invest/help'?>" target="_blank">新手上路</a> | 
-			<a href="<?=B . '/invest/question'?>">常见问题</a> | 
-			<a href="<?=B . '/invest/benefit'?>">投资效益</a> | 
-			<a href="<?=B . '/invest/concat'?>" target="_blank">联系方式</a> |
-			<a href="<?=B . '/invest/vert'?>" target="_blank">公司证书</a> |
-			<a href="<?=B . '/invest/note'?>" target="_blank">客户交流</a>
+			<a href="http://www.bjfgcm.com/invest/about">关于我们</a> | 
+			<a href="http://www.bjfgcm.com/invest/help" target="_blank">新手上路</a> | 
+			<a href="http://www.bjfgcm.com/invest/question">常见问题</a> | 
+			<a href="http://www.bjfgcm.com/invest/benefit">投资效益</a> | 
+			<a href="http://www.bjfgcm.com/invest/concat" target="_blank">联系方式</a> |
+			<a href="http://www.bjfgcm.com/invest/vert" target="_blank">公司证书</a> |
+			<a href="http://www.bjfgcm.com/invest/note" target="_blank">客户交流</a>
 		</p>
 		<p>Copyright © 2012 北京富广文化传媒有限公司</p>
 	</div><!-- end of footer -->
