--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="/css/u.css" media="all">
 	<script type="text/javascript" src="/js/jquery1.3.2.js"></script>
 	<script type="text/javascript" src="/js/socket.js"></script>
-	<script type="text/javascript" src="/js/index.js"></script>
+	
 	<script type="text/javascript" src="/js/date.js"></script>
 	<script type="text/javascript">
 		var userName = '<%= name %>';
@@ -43,8 +43,10 @@
 			</div>
 		</div>
 		<div id="send-message">
-			<input id="message">
-			<button id="btn">发送</button>
+            <form action="javascript:;" onsubmit="return false;"id="sbu">
+			<input id="message" type="text" name="message">
+			<input type="submit" id="btn" value="发送">
+            </form>
 		</div>
 	</div>
 </div>
@@ -63,6 +65,6 @@
 	</div><!-- end of footer -->
 
 </div>
-	
+	<script type="text/javascript" src="/js/index.js"></script>
 </div>
 </body></html>
